@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210101"
-#define public MagickPackageReleaseDate "snapshot-20210101"
+#define public MagickPackageVersionAddendum ".020210102"
+#define public MagickPackageReleaseDate "snapshot-20210102"
