@@ -35,6 +35,13 @@
 <div class="document">
 
 
+<p>2021-01-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<p>* PerlMagick/Magick.xs: Remove GCC warnings which spewed out at
+increased warning levels.</p>
+<p>* magick/magick_types.h.in: Hide definitions not intended for the
+rest of the world under &quot;if defined(MAGICK_IMPLEMENTATION)&quot;.</p>
+</blockquote>
 <p>2021-01-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* configure.ac: Skip library symbol tests for gdi32 since these
